--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>hello coursera</title>
+<meta charset="utf-8">
+<link type="text/css" rel="stylesheet" href="my.css"/>
+<title>
+assignment solution for module 2
+</title>
 </head>
 <body>
 <h1>
-hello coursera
-</h1>	
+Our Menu
+</h1>
+<div  class="col-lg-1 col-md-1 col-lw-1" > <p class="typef" id="chicken" >  chicken   </p>
+  <p class="content" >
+    Chicken Tetrazzini combines cooked vermicelli, chicken, and mushrooms with a rich sherry–Parmesan cheese sauce.
+    The mixture is sprinkled with breadcrumbs and Parmesan cheese and baked until bubbly and golden.
+    This is a great way to use leftover cooked chicken.Parmesan is full of flavor, so a little goes a long way.
+ </p>
+</div>
+<div  class="col-lg-1 col-md-1 col-lw-1"> <p class="typef "id="beef">  beef   </p>
+  <p class="content" >
+Ground beef continues to be the favorite for American red-meat eaters, accounting for 60% of all fresh beef prepared in-home, according to the National Cattlemen's Beef Association. Americans eat an average of three burgers per week—50 billion burgers per year. That's a lot of beef and, depending on the mix, a lot of fat.
+ </p>
+</div>
+<div  class="col-lg-1 col-md-2 col-lw-1"> <p class="typef "id="sushi">  sushi   </p>
+  <p class="content" >
+4 ounces cauliflower florets1 teaspoon unsalted butter1 tablespoon unsweetened coconut milk2 sheets nori1 purple carrot, very thinly sliced (preferably on a mandoline)6 ounces sashimi-grade salmon¼ teaspoon aleppo pepper2 teaspoons coconut aminos, for serving
+  </p>
+</div>
 </body>
 </html>
